src/test/deca/context/invalid/intermediaire2/mots_reserves/01class.deca
// Description:
// Test du mettre le mot réservé class, en nom de variable.
//
// Resultats:
//  01class.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int class;
}